# E-Display

./: .gitignore  LICENSE  readme.md
.github/: copilot-instructions.md
arduino/E-Ink-Display/: E-Ink-Display.ino  driver.h
doc/: dir.md
kindle/: init.sh  readme.md  tmux  update.sh
server/: .gitignore  MQTT_Client.py  app.py  calendar_base.py  copilot-instructions.md  db.py  kindle.py  mqtt2influxdb.py  ms_graph.py  paths.py  plugin_base.py  plugin_manager.py  pyproject.toml  readme.md  repo.py  requirements.txt  serve.sh  theme.py  trmnl_7_5in.py
server/helpers/: .gitignore  device_sleep_workweek.py  mqtt.py  nws_weather.py  renderer.py  renderer_calendar_google.py  renderer_calendar_outlook.py  string_filters.py
server/icons/: .gitignore  readme.md  weather-icon-map.json
server/plugins/: calendar_google.py  calendar_outlook.py  calendar_outlook.py.deprecated  calendar_outlook_msal.py  calendar_outlook_plugin.py  device_home_office.py  device_kitchen.py  devices.py  plugin_string_filters.py  server_admin.py
trmnl-7.5in-diy-kit/doc/: readme.md
trmnl-7.5in-diy-kit/doc/XIAO-ePaper-Display-Board-EE04-v1.2-kicad/: 01 Descriptions.kicad_sch  02 Block Diagram.kicad_sch  E-ink.kicad_sch  Power.kicad_sch  XIAO ePaper Display Board EE04_V1.2.kicad_pcb  XIAO ePaper Display Board EE04_V1.2.kicad_prl  XIAO ePaper Display Board EE04_V1.2.kicad_pro  XIAO ePaper Display Board EE04_V1.2.kicad_sch  XIAO.kicad_sch
trmnl-7.5in-diy-kit/mechanical/: Frame-Mill-Out.FCStd
