[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipython>=9.8.0",
    "msal>=1.34.0",
    "nicegui>=3.4.1",
    "paho-mqtt>=2.1.0",
    "pexpect>=4.9.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
]
