[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "fastapi>=0.128.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "google-auth-oauthlib>=1.2.2",
    "ipython>=9.8.0",
    "msal>=1.34.0",
    "nicegui>=3.4.1",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "pexpect>=4.9.0",
    "pillow==11.3.0",
    "pydantic>=2.12.5",
    "pyvips>=3.1.1",
    "sh>=2.2.2",
    "sqlmodel>=0.0.31",
]
